--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger"
                             href="contact.html">Contact</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger"
-                            href="Gallery.html">Gallery</a></li>
+                            href="gallery.html">Gallery</a></li>
                 </ul>
             </div>
         </div>
