--- a/contact.html
+++ b/contact.html
@@ -19,8 +19,10 @@
         <div class="container"><a class="navbar-brand" href="index.html">F.A.G</a>
 
             <ul class="nav navbar-nav ml-auto text-uppercase">
-                <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger"
+                <li class="nav-item active" role="presentation"><a class="nav-link js-scroll-trigger"
                         href="contact.html">Contact</a></li>
+                 <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger"
+                        href="gallery.html">Gallery</a></li>
             </ul>
 
         </div>
