--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             <div class="row">
                 <div class="col-sm-4">
                     <div class="team-member"><img class="rounded-circle mx-auto"
-                            src="assets/img/the leak experience.webp">
+                            src="assets/img/founder.jpeg">
                         <h4>N'bete Smallwood Gizzie</h4>
                         <p class="text-muted">Founder</p>
                         <ul class="list-inline social-buttons">
@@ -496,7 +496,7 @@
                             <div class="col-lg-8 mx-auto">
                                 <div class="modal-body">
                                     <h2 class="text-uppercase">N'bete Smallwood Gizzie</h2>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/the leak experience.webp">
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/founder.jpeg">
                                     <p>
 
                                     </p>
