--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4 class="subheading">Vision</h4>
+                                   <!-- <h4 class="subheading">Vision</h4> -->
                                 </div>
                                 <div class="timeline-body">
                                     <p class=" ">FAG believes that all Girls should have the opportunity to
@@ -205,7 +205,7 @@
                         <li class="list-group-item">
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4 class="subheading">Values</h4>
+<!--                                     <h4 class="subheading">Values</h4> -->
                                 </div>
                                 <div class="timeline-body">
                                     <p class=" ">FAG is a special place where the fulfillment of potential
