--- a/index.html
+++ b/index.html
@@ -225,8 +225,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-4">
-                    <div class="team-member"><img class="rounded-circle mx-auto"
-                            src="assets/img/founder.jpeg">
+                    <div class="team-member">
+                        <a class="portfolio-link" data-toggle="modal" href="#teamModal1">
+                        <img class="rounded-circle mx-auto" src="assets/img/founder.jpeg">
+                        </a>
                         <h4>N'bete Smallwood Gizzie</h4>
                         <p class="text-muted">Founder</p>
                         <ul class="list-inline social-buttons">
